--- a/src/components/Layout/styles.css
+++ b/src/components/Layout/styles.css
@@ -14,6 +14,7 @@
 
 .draw-field-container
 {
+  position: relative;
   width: 100%;
   height: 100%;
 }
@@ -28,7 +29,7 @@
 
 .drawing-properties-container
 {
-  position: absolute;
+  position: fixed;
   margin: 1rem;
   right: 0%;
   bottom: 0%;
